Changed ajax to return array of objects containing more data also updated view states to display object values

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
             console.log('Delete Button Clicked');
         },
         renderView: function(){
+            console.log('renderview this.props.children:');
+            console.log(this.props.children);
             return (
                     <div className="col-lg-4 border pb-2">
-                        <div className="todoText mb-3 mt-2">{this.props.children}</div>
+                        <div className="todoText mb-3 mt-2">{this.props.children.text}</div>
                         <hr/>
                         <button onClick={this.edit} className="btn btn-primary">Edit</button>
                         <button onClick={this.delete} className="btn btn-danger ml-1">Delete</button>
@@ -57,7 +59,7 @@
         renderEdit: function(){
             return (
                     <div className="col-lg-4 border pb-2">
-                        <textarea className="form-control mt-1" defaultValue={this.props.children} ref="todoTextArea"></textarea>
+                        <textarea className="form-control mt-1" defaultValue={this.props.children.text} ref="todoTextArea"></textarea>
                         <hr/>
                         <button onClick={this.save} className="btn btn-success">Save</button>
                     </div>
@@ -90,6 +92,8 @@
                             }
                         }
                     ).then(function(result) {
+                            console.log('componentdidmoutn ajax:');
+                            console.log(result.data);
                             _this.setState({
                                 todos: result.data
                             });
